added deletion with emails
